# algebraic_immunity_rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: ai.rs  boolean_function.rs  lib.rs  vandermonde.rs
